--- a/index.html
+++ b/index.html
@@ -29,17 +29,13 @@
     .login{background:#071225;padding:26px;border-radius:12px;width:360px;box-shadow:0 10px 40px rgba(2,6,23,0.8)}
     .login h2{margin:0 0 8px}
     .field{display:flex;flex-direction:column;margin:8px 0}
-    input{padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:inherit}
+    input,select,textarea{padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:inherit;width:100%}
     button{background:linear-gradient(90deg,var(--accent),#7c3aed);border:0;padding:10px 14px;border-radius:8px;color:#042027;font-weight:700;cursor:pointer}
-
-    /* small screens */
-    @media (max-width:900px){.card-grid{grid-template-columns:repeat(2,1fr)}.layout{grid-template-columns:1fr}}
-    @media (max-width:520px){.card-grid{grid-template-columns:1fr}}
-
+    .success{color:#10b981;font-weight:700;margin-top:8px}
     .pill{display:inline-block;padding:4px 8px;border-radius:20px;background:rgba(6,182,212,0.14);color:var(--accent);font-weight:600;font-size:13px}
     .table-scroll{max-height:320px;overflow:auto}
-    .pay-form input, .pay-form select{width:100%;margin:6px 0;padding:8px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:inherit}
-    .success{color:#10b981;font-weight:700}
+    @media (max-width:900px){.card-grid{grid-template-columns:repeat(2,1fr)}.layout{grid-template-columns:1fr}}
+    @media (max-width:520px){.card-grid{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
@@ -60,6 +56,7 @@
       <div class="card-grid" id="metrics"></div>
 
       <div class="layout">
+        <!-- Left side -->
         <div>
           <div class="panel card">
             <h3>Fleet Operations</h3>
@@ -80,29 +77,48 @@
           </div>
         </div>
 
+        <!-- Right side -->
         <div>
           <div class="panel card">
             <h3>Billing & Payments</h3>
             <div class="muted">Outstanding invoice</div>
-            <div style="margin-top:10px">
-              <div id="invoiceArea"></div>
-            </div>
+            <div id="invoiceArea" style="margin-top:10px"></div>
             <hr style="opacity:0.06;margin:12px 0">
-            <div>
-              <h4>Pay a bill</h4>
-              <form id="payForm" class="pay-form">
-                <label>Amount (₹)</label>
-                <input type="number" id="payAmount" required min="1" value="1200">
-                <label>Payment method</label>
-                <select id="payMethod">
-                  <option>Credit Card</option>
-                  <option>UPI</option>
-                  <option>Netbanking</option>
-                </select>
-                <button type="submit">Pay Now</button>
-                <div id="payStatus" style="margin-top:10px"></div>
-              </form>
-            </div>
+            <h4>Pay a bill</h4>
+            <form id="payForm">
+              <label>Amount (₹)</label>
+              <input type="number" id="payAmount" required min="1" value="1200">
+              <label>Payment method</label>
+              <select id="payMethod">
+                <option>Credit Card</option>
+                <option>UPI</option>
+                <option>Netbanking</option>
+              </select>
+              <button type="submit">Pay Now</button>
+              <div id="payStatus"></div>
+            </form>
+          </div>
+
+          <!-- Drone Booking Panel -->
+          <div class="panel card" style="margin-top:12px">
+            <h3>Book a Drone</h3>
+            <div class="muted">Schedule your next delivery or survey mission</div>
+            <form id="bookForm" style="margin-top:10px">
+              <label>Location</label>
+              <input type="text" id="bookLocation" placeholder="e.g., Bengaluru, KA" required>
+              <label>Drone Type</label>
+              <select id="bookDroneType" required>
+                <option>Scout (Lightweight)</option>
+                <option>Carrier (Heavy-lift)</option>
+                <option>Mapper (Survey)</option>
+              </select>
+              <label>Payload Weight (kg)</label>
+              <input type="number" id="bookWeight" placeholder="Max 20kg" required min="0">
+              <label>Additional Notes</label>
+              <textarea id="bookNotes" rows="2" placeholder="Any special instructions..."></textarea>
+              <button type="submit" style="margin-top:8px">Book Drone</button>
+              <div id="bookStatus"></div>
+            </form>
           </div>
 
           <div class="panel card" style="margin-top:12px">
@@ -118,8 +134,6 @@
           </div>
         </div>
       </div>
-
-      <div style="height:34px"></div>
     </div>
   </div>
 
@@ -137,7 +151,6 @@
   <!-- libs -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-    // --- Dummy data generator ---
     const fakeMissions = [
       {id: 'M-001', drone: 'AL-Scout-01', status: 'Completed', duration: '12m', cost: 420},
       {id: 'M-002', drone: 'AL-Scout-02', status: 'In Flight', duration: '6m', cost: 210},
@@ -153,7 +166,6 @@
       {title:'Uptime', value: '99.2%'}
     ];
 
-    // --- Login handling (dummy) ---
     const loginModal = document.getElementById('loginModal');
     const userArea = document.getElementById('userArea');
 
@@ -175,78 +187,67 @@
 
     document.getElementById('loginBtn').addEventListener('click', ()=>{
       const email = document.getElementById('email').value || 'demo@aerolink.com';
-      const pw = document.getElementById('password').value || 'demo';
-      // Very naive dummy auth
       localStorage.setItem('aerolink_user', JSON.stringify({email}));
       renderUserArea();
       initApp();
     });
 
-    // init UI
     function initApp(){
-      // metrics
       const mg = document.getElementById('metrics'); mg.innerHTML='';
       metrics.forEach(m=>{const c=document.createElement('div');c.className='card';c.innerHTML=`<div class="muted">${m.title}</div><div class="big">${m.value}</div>`;mg.appendChild(c)});
 
-      // missions table
       const tbody = document.getElementById('missionsTbody'); tbody.innerHTML='';
       fakeMissions.forEach(ms=>{const tr=document.createElement('tr');tr.innerHTML=`<td>${ms.id}</td><td>${ms.drone}</td><td>${ms.status}</td><td>${ms.duration}</td><td>${ms.cost}</td>`;tbody.appendChild(tr)});
 
-      // quick insights
       document.getElementById('activeDrones').innerText = 18;
       document.getElementById('monthCost').innerText = '₹' + (fakeMissions.reduce((s,m)=>s+m.cost,0)+4200);
 
-      // usage chart
       const ctx = document.getElementById('usageChart').getContext('2d');
       const labels = ['Nov 1','Nov 5','Nov 10','Nov 15','Nov 20','Nov 25','Nov 30'];
       const data = [12,18,8,24,16,22,30];
       new Chart(ctx, {type:'line',data:{labels, datasets:[{label:'Missions',data,fill:true,tension:0.3}]}, options:{plugins:{legend:{display:false}}}});
-
-      // invoice
       renderInvoice();
     }
 
     function renderInvoice(){
       const invoiceArea = document.getElementById('invoiceArea');
-      // dummy outstanding invoice
-      const invoice = {id:'INV-2025-09',date:'2025-10-28',due:'2025-11-15',amount:4320, status:'Unpaid'};
+      const invoice = {id:'INV-2025-09',date:'2025-10-28',due:'2025-11-15',amount:4320,status:'Unpaid'};
       invoiceArea.innerHTML = `<div style="display:flex;justify-content:space-between;align-items:center">
-        <div>
-          <div style="font-weight:700">${invoice.id}</div>
-          <div class="muted">Due ${invoice.due} · ${invoice.date}</div>
-        </div>
-        <div style="text-align:right">
-          <div style="font-weight:800;font-size:18px">₹${invoice.amount}</div>
-          <div style="margin-top:6px"><span class="pill">${invoice.status}</span></div>
-        </div>
+        <div><div style="font-weight:700">${invoice.id}</div><div class="muted">Due ${invoice.due} · ${invoice.date}</div></div>
+        <div style="text-align:right"><div style="font-weight:800;font-size:18px">₹${invoice.amount}</div><div style="margin-top:6px"><span class="pill">${invoice.status}</span></div></div>
       </div>`;
     }
 
-    // Pay form
     document.getElementById('payForm').addEventListener('submit', (e)=>{
       e.preventDefault();
       const amt = Number(document.getElementById('payAmount').value);
       const method = document.getElementById('payMethod').value;
       const status = document.getElementById('payStatus');
       status.innerHTML = 'Processing payment...';
-      // fake async simulation
       setTimeout(()=>{
         status.innerHTML = `<div class="success">Payment of ₹${amt} via ${method} succeeded.</div>`;
-        // update invoice area
         document.getElementById('invoiceArea').innerHTML = `<div style="display:flex;justify-content:space-between;align-items:center">
-          <div>
-            <div style="font-weight:700">INV-2025-09</div>
-            <div class="muted">Paid on ${new Date().toISOString().slice(0,10)}</div>
-          </div>
-          <div style="text-align:right">
-            <div style="font-weight:800;font-size:18px">₹0</div>
-            <div style="margin-top:6px"><span class="pill">Paid</span></div>
-          </div>
+          <div><div style="font-weight:700">INV-2025-09</div><div class="muted">Paid on ${new Date().toISOString().slice(0,10)}</div></div>
+          <div style="text-align:right"><div style="font-weight:800;font-size:18px">₹0</div><div style="margin-top:6px"><span class="pill">Paid</span></div></div>
         </div>`;
       }, 900);
     });
 
-    // boot
+    // Dummy booking handler
+    document.getElementById('bookForm').addEventListener('submit', (e)=>{
+      e.preventDefault();
+      const loc = document.getElementById('bookLocation').value;
+      const type = document.getElementById('bookDroneType').value;
+      const weight = document.getElementById('bookWeight').value;
+      const notes = document.getElementById('bookNotes').value;
+      const status = document.getElementById('bookStatus');
+      status.innerHTML = 'Submitting booking...';
+      setTimeout(()=>{
+        status.innerHTML = `<div class="success">✅ Drone booked successfully for ${loc}.<br>Type: ${type}, Payload: ${weight}kg.</div>`;
+        e.target.reset();
+      }, 900);
+    });
+
     renderUserArea();
     if(JSON.parse(localStorage.getItem('aerolink_user'))) initApp();
   </script>
